# ShittyPlusPlus

./: BenchmarkResult.cpp  CMakeLists.txt  main.cpp
benchmarks/: ConstantBench.cpp  ConstantBench.h  Exponential.h  Factorial.h  IteratedLogarithmic.h  LinearBench.h  LognBench.cpp  LognBench.h  NlognBench.h  NsquaredBench.h  NsquaredTriangularBench.cpp  NsquaredTriangularBench.h  PolyLogarithmic.h  SubExponential.h
headers/: Benchmark.h  BenchmarkResult.h  Operator.h  QualityOfLife.h
results/: results.txt
